Last commit before overhaul on UppaalSemanticVisitor.  I finished the components that store all the information about the attribute value pairs including attributes to their arbitrary indexes, the list of operators indexes which need arbitrary values, the triads for the AV pairs, and the mapping of variables to their paths with arbitrary IDs.